# callbacks

./: .gitignore  .travis.yml  README.md  setup.cfg  tox.ini
callbacks/: __init__.py  auto.py  callbacks.py  events.py  registry.py
tests/: test_callbacks.py  test_class_level_callbacks.py  test_events.py  test_exceptions.py  test_method_callbacks.py
