[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra
testpaths = tests
filterwarnings =
    once::Warning

[bdist_wheel]
universal = 1

[metadata]
name = callbacks
author = David Morton
author-email = davidlmorton@gmail.com
url = 'https://github.com/davidlmorton/callbacks'
license = LICENSE.txt
summary = Simple callbacks using decorators
description-file = README.md

[files]
packages =
    callbacks
